# RWSimplifiedPatcher

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Node.cpp  Node.h  README.md  README_EN.md  RWSimplifiedPatcher.sln  RWSimplifiedPatcher.vcxproj  RWSimplifiedPatcher.vcxproj.filters  consts.cpp  consts.h  defclasses.txt  helper.cc  helper.cpp  helper.h  helper.hpp  main.cpp  replace.cpp  shared.cpp  shared.hpp  simple_xml.cc  simple_xml.h  test.cpp  test.py  tools.cpp  tools.h  xml-parser.py  常用规则.ruleset
example_mod/About/: About.xml
example_mod/Patches/: Buildings_Furniture.xml  Buildings_Misc.xml  Buildings_Power.xml  Buildings_Temperature.xml  Buildings_Unique.xml  ResearchProjects.xml
helper/: CMakeLists.txt  helper.cpp  helper.hpp  helper.vcxproj  helper.vcxproj.filters
replace/: CMakeLists.txt  interactive_replace.cpp  replace.cpp  replace.vcxproj  replace.vcxproj.filters
